Fix overflow in admin

--- a/app/assets/stylesheets/web/components/panels.sass
+++ b/app/assets/stylesheets/web/components/panels.sass
@@ -128,7 +128,6 @@
 
 .panel-order-info
   max-width: 1000px
-  overflow: hidden
   .panel-heading
     span, small, .btn-group
       & +
